# schema

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builders.rs  lib.rs  value.rs
