[package]
name = "schema"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2018"
repository = "https://github.com/kaimast/schema"
description = "Helper classes to manage database schemas"
license = "MIT"
readme = "README.md"
keywords = ["storage", "database"]

[dependencies]
log = { version="0.4" }
bincode = { version="^1.3" }
serde = { version="1", features=["derive"] }
pyo3 = { version="0.14", optional=true }
serde_json = { version="1", optional=true }

[dev-dependencies]
env_logger = { version="0.7" }

[features]
default = ["json", "python-bindings"]
python-bindings = ["pyo3"]
json = ["serde_json"]
