[package]
name = "schema"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2021"
repository = "https://github.com/kaimast/schema"
description = "Helper classes to manage database schemas"
license = "MIT"
readme = "README.md"
keywords = ["storage", "database"]

[dependencies]
log = "0.4"
bincode = "^1.3"
serde = { version="1", features=["derive"] }
pyo3 = { version="0.20", optional=true }
serde_json = { version="1", optional=true }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["json", "python-bindings"]
python-bindings = ["pyo3"]
json = ["serde_json"]
